language/move-lang/tests/move_check/expansion/diem_prelude_missing_function.exp
error: 

   ┌── tests/move_check/expansion/diem_prelude_missing_function.move:4:9 ───
   │
 4 │         Option::no();
   │         ^^^^^^^^^^ Invalid module access. Unbound function 'no' in module '0x1::Option'
   │

error: 

   ┌── tests/move_check/expansion/diem_prelude_missing_function.move:5:9 ───
   │
 5 │         Signer::no();
   │         ^^^^^^^^^^ Invalid module access. Unbound function 'no' in module '0x1::Signer'
   │

error: 

   ┌── tests/move_check/expansion/diem_prelude_missing_function.move:6:9 ───
   │
 6 │         Vector::no();
   │         ^^^^^^^^^^ Invalid module access. Unbound function 'no' in module '0x1::Vector'
   │

