language/move-lang/tests/move_check/expansion/diem_prelude_missing_function.move
address 0x42 {
module M {
    fun ex() {
        Option::no();
        Signer::no();
        Vector::no();
    }
}
}
